--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <link rel="stylesheet.css" href="mortexag.github.io/first-try/stylesheet-1.css">
 <head>
-<h1>Hello World!</h1>
+<h1 class=".toptext">Hello World!</h1>
 </head>
   <body>
-    <h1> Welcome to my First Github Site</h1>
+    <h1 class=".toptext"> Welcome to my First Github Site</h1>
   </body>
 </html>
