--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<link rel="stylesheet.css" href="mortexag.github.io/first-try/stylesheet-1.css">
+<link rel="stylesheet.css" href="https://mortexag.github.io/first-try/stylesheet-1.css">
 <head>
 <h1 class=".toptext">Hello World!</h1>
 </head>
