--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <link rel="stylesheet.css" href="https://mortexag.github.io/first-try/stylesheet-1.css">
 <head>
-<h1 class=".toptext">Hello World!</h1>
+<h1 class=".toptext" style="text-align:center;">Hello World!</h1>
 </head>
   <body>
     <h1 class=".toptext"> Welcome to my First Github Site</h1>
