--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <h1 class=".toptext" style="text-align:center;">Hello World!</h1>
 </head>
   <body>
-    <h1 class=".toptext"> Welcome to my First Github Site</h1>
+    <h1 class="toptext"> Welcome to my First Github Site</h1>
   </body>
 </html>
