--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<link rel="stylesheet.css" href="gitcdn.link/MortexAG/first-try/edit/main/stylesheet-1.css">
+<link rel="stylesheet.css" href="stylesheet-1.css">
 <head>
 <h1 class=".toptext" style="text-align:center;">Hello World!</h1>
 </head>
