--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <h1 class=".toptext" style="text-align:center;">Hello World!</h1>
 </head>
   <body>
+    <img src="My Profile Pic.jpeg" width="200" height="500">
     <h1 class="toptext"> Welcome to my First Github Site</h1>
   </body>
 </html>
