--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <h1 class=".toptext" style="text-align:center;">Hello World!</h1>
 </head>
   <body>
-    <img src="My Profile Pic.jpeg" width="200" height="500" class="image-center">
+    <img src="My Profile Pic.jpeg" width="250" height="250" class="image-center">
     <h2 class="toptext"> Welcome to my First Github Site</h2>
+    <hr size="3px" width="60%">
+    <h2 class="toptext">This is the second line and it's centered</h2>
+    <br>
+    <h2 class="text-red">this is the third line and it's colored red</h2>
   </body>
 </html>
