--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <hr size="3px" width="60%">
     <h2 class="toptext">This is the second line and it's centered</h2>
     <br>
-    <h2 class="text-red">this is the third line and it's colored red</h2>
+    <h2 class="text-red">this is the third line and it's colored green</h2>
   </body>
 </html>
