--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <link rel="stylesheet" type="text/css" href="stylesheet-1.css">
+  <link rel="icon" type="image/x-icon" href="anime profile pic small.png">
 <head>
 <h1 class=".toptext" style="text-align:center;">Welcome to My Frist Trial Site Here</h1>
 </head>
