--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
+  <title>Mortex Trial Site</title>
 <link rel="stylesheet" type="text/css" href="stylesheet-1.css">
   <link rel="icon" type="image/x-icon" href="anime profile pic small.png">
 <head>
-<h1 class=".toptext" style="text-align:center;">Welcome to My Frist Trial Site Here</h1>
+<h1 class=".toptext" style="text-align:center;">Hello World!</h1>
 </head>
   <body>
     <img src="My Profile Pic.jpeg" width="250" height="250" class="image-center">
