--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <title>Mortex Trial Site</title>
 <link rel="stylesheet" type="text/css" href="stylesheet-1.css">
-  <link rel="icon" type="image/x-icon" href="anime profile pic small.png">
+  <link rel="icon" type="image/x-icon" href="http://mortgallery.unaux.com/assets/kurzastro.jpeg">
 <head>
 <h1 class=".toptext" style="text-align:center;">Hello World!</h1>
 </head>
