--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
   <title>Mortex Trial Site</title>
 <link rel="stylesheet" type="text/css" href="stylesheet-1.css">
-  <link rel="icon" type="image/x-icon" href="http://mortgallery.unaux.com/assets/kurzastro.jpeg">
+  <link rel="icon" type="image/x-icon" href="anime profile pic small.png">
 <head>
 <h1 class=".toptext" style="text-align:center;">Hello World!</h1>
 </head>
   <body>
-    <img src="My Profile Pic.jpeg" width="250" height="250" class="image-center">
+    <img src="http://mortgallery.unaux.com/assets/kurzastro.jpeg" width="250" height="250" class="image-center">
     <h2 class="toptext"> Welcome to my First Github Site</h2>
     <hr size="3px" width="60%">
     <h2 class="toptext">This is the second line and it's centered</h2>
