--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <h1 class=".toptext" style="text-align:center;">Hello World!</h1>
 </head>
   <body>
-    <img src="http://mortgallery.unaux.com/assets/kurzastro.jpeg" width="250" height="250" class="image-center">
+    <img src="kurzastro.jpeg" width="250" height="250" class="image-center">
     <h2 class="toptext"> Welcome to my First Github Site</h2>
     <hr size="3px" width="60%">
     <h2 class="toptext">This is the second line and it's centered</h2>
