--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <h2 class="toptext">This is the second line and it's centered</h2>
     <br>
     <h2 class="text-red">this is the third line and it's colored green</h2>
-    <h2 class"toptext">Test Speed</h2>
+    <h2 class"toptext">Test Speed #1</h2>
   </body>
 </html>
