--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
   <title>Mortex Trial Site</title>
+  #To Add Python to HTML
+  <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
+<script defer src="https://pyscript.net/alpha/pyscript.js"></script>
+  #Style Sheet
 <link rel="stylesheet" type="text/css" href="stylesheet-1.css">
+  #Icon
   <link rel="icon" type="image/x-icon" href="anime profile pic small.png">
 <head>
 <h1 class=".toptext" style="text-align:center;">Hello World!</h1>
@@ -8,6 +13,10 @@
   <body>
     <img src="kurzastro.jpeg" width="250" height="250" class="image-center">
     <h2 class="toptext"> Welcome to my First Github Site</h2>
+    <py-script> 
+      myname = "Mortex"
+      print(myname)
+      </py-script>
     <hr size="3px" width="60%">
     <h2 class="toptext">This is the second line and it's centered</h2>
     <br>
