--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
   <title>Mortex Trial Site</title>
-  #To Add Python to HTML
+  <! To Add Python to HTML >
   <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
 <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
-  #Style Sheet
+  <! Style Sheet >
 <link rel="stylesheet" type="text/css" href="stylesheet-1.css">
-  #Icon
+  <! Icon >
   <link rel="icon" type="image/x-icon" href="anime profile pic small.png">
 <head>
 <h1 class=".toptext" style="text-align:center;">Hello World!</h1>
@@ -13,9 +13,9 @@
   <body>
     <img src="kurzastro.jpeg" width="250" height="250" class="image-center">
     <h2 class="toptext"> Welcome to my First Github Site</h2>
-    <py-script> 
+    <py-script class="toptext"> 
       myname = "Mortex"
-      print(myname)
+      print(Hello My Name is + "" + print(myname)) 
       </py-script>
     <hr size="3px" width="60%">
     <h2 class="toptext">This is the second line and it's centered</h2>
