--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h2 class="toptext"> Welcome to my First Github Site</h2>
     <py-script class="toptext"> 
       myname = "Mortex"
-      print("Hello My Name is" + print(myname)) 
+      print("Hello My Name is") 
       print(myname)
       </py-script>
     <hr size="3px" width="60%">
