--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <img src="kurzastro.jpeg" width="250" height="250" class="image-center">
     <h2 class="toptext"> Welcome to my First Github Site</h2>
     <py-script class="toptext"> 
+      print("#This is a Python Printed text")
       myname = "Mortex"
-      print("Hello My Name is") 
-      print(myname)
+      print("Hello My Name is") + print(myname) 
+      
       </py-script>
     <hr size="3px" width="60%">
     <h2 class="toptext">This is the second line and it's centered</h2>
