--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <py-script class="toptext"> 
       print("#This is a Python Printed text")
       myname = "Mortex"
-      print("Hello My Name is") + print(myname) 
+      print("Hello My Name is", end='')
+      print(myname) 
       
       </py-script>
     <hr size="3px" width="60%">
