--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <title>Mortex Trial Site</title>
   <! To Add Python to HTML >
-  <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
+  
 <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
   <! Style Sheet >
 <link rel="stylesheet" type="text/css" href="stylesheet-1.css">
@@ -17,7 +17,7 @@
       print("#This is a Python Printed text")
       myname = "Mortex"
       print("Hello My Name is", myname, end='') 
-      
+      print("#End of Python Printed Text")
       </py-script>
     <hr size="3px" width="60%">
     <h2 class="toptext">This is the second line and it's centered</h2>
