--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <py-script class="toptext"> 
       print("#This is a Python Printed text")
       myname = "Mortex"
-      print("Hello My Name is", myname, "welcome", sep='') 
+      print("Hello My Name is", myname, "HI!") 
       print("#End of Python Printed Text")
       </py-script>
     <hr size="3px" width="60%">
