--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
       print("#This is a Python Printed text")
       myname = "Mortex"
       print("Hello My Name is", myname, "HI!") 
+      band = 8
+name = "Sarah Fier"
+
+print("The band for", name, "is", band, "out of 10")
       print("#End of Python Printed Text")
       </py-script>
     <hr size="3px" width="60%">
