--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
     <img src="kurzastro.jpeg" width="250" height="250" class="image-center">
     <h2 class="toptext"> Welcome to my First Github Site</h2>
     <py-script class="toptext"> 
-      print("#This is a Python Printed text")
-      myname = "Mortex"
-      print("Hello My Name is", myname, "HI!") 
-      print("#End of Python Printed Text")
+     from email.mime import image
+from PIL import Image, ImageFont, ImageDraw
+my_image = Image.open("kurzastro.jpeg")
+title_font = ImageFont.truetype("BRUSHSCI.TTF", 75)
+title_text = "Bonjour! What a Wonderful Day"
+image_editable = ImageDraw.Draw(my_image)
+image_cord = (15,25)
+image_editable.text(image_cord, title_text, fill="Black", font=title_font)
+my_image.save("results.png")
       </py-script>
     <hr size="3px" width="60%">
     <h2 class="toptext">This is the second line and it's centered</h2>
